--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/themes": "^3.1.4",
     "@vercel/analytics": "^1.3.1",
+    "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
