--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-dom": "^18.3.1",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.3",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "thumbhash": "^0.1.1"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
